<resources>
    <string name="app_name">Talkable</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy">testtesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttest</string>
    <string name="tv_talk_feedback_bottom_graph"><u>그래프가 변형되었어요. 확인해보세요!</u></string>
    <string name="btn_talk_feedback_bottom_complete">대화 끝내기</string>
    <string name="tv_bottom_sheet_talk_title">문장의 의미를 보다 명확하고 자연스럽게 전달하기 위해 재구성되었습니다.</string>
    <string name="tv_dialog_feedback_pronunciation_complete">AI가 분석하고 있어요!\n잠시만 기다려 주세요:)</string>
    <string name="tv_talk_feedback_learned_after_sentence_label">교정된 문장</string>
    <string name="login_intro">AI 대화를 통한\n맞춤형 영어 회화 학습,</string>
    <string name="login_sign_up"><u>카카오계정으로 회원가입</u></string>
    <string name="agreement_title">약관을 확인해주세요</string>
    <string name="agreement_all">전체 약관 동의</string>
    <string name="agreement_age">[필수] 만 14세 이상</string>
    <string name="agreement_terms">[필수] 서비스 이용약관</string>
    <string name="agreement_privacy">[필수] 개인정보 처리방침</string>
    <string name="agreement_marketing">[선택] 광고성 정보 수신 및 마케팅 활용 동의</string>
    <string name="agreement_start">시작하기</string>
    <string name="tv_talk_english">What did you do today in school?</string>
    <string name="tv_talk_korean">너는 오늘 학교에서 무엇을 했어?</string>
    <string name="tv_talk_hint_title">힌트</string>
    <string name="hint_talk"><u>도움말</u></string>
    <string name="tv_talk_hint_title_example">예시 문장</string>
    <string name="hint_talk_example"><u>예시 문장</u></string>
    <string name="tv_talk_show_full_conversation">전체 대화보기</string>
    <string name="tv_talk_listen">Amy의 말을 잘 들어보세요!</string>
    <string name="tv_talk_content_hint">take를 사용해서 말해보세요!</string>
    <string name="tv_talk_content_example">I play with my friend and learn English.</string>
    <string name="tv_talk_feedback_retry">교정받은 문장으로 다시 말해보세요!</string>
    <string name="error_talk_retry">음성 인식을 처리할 수 없습니다.\n다시 시도해 주세요.</string>
    <string name="error_talk_permission">음성 인식을 위해 마이크 권한이 필요합니다.</string>
    <string name="tv_talk_feedback_detail"><u>자세한 피드백 보기</u></string>
    <string name="label_talk_next_to_feedback_en">I\'ve revised your response to make it more natural and accurate.\nTap the button below to check it out.</string>
    <string name="label_talk_next_to_feedback_ko">%1$s의 대답을 더 자연스럽고 올바르게 고쳐줄게.\n아래 버튼을 눌러 확인해봐.</string>
    <string name="tv_talk_first_en">Hi! My name is Amy. I want to be a friends with you.</string>
    <string name="tv_talk_first_kr">안녕, 내 이름은 에이미야. 너와 친구가 되고 싶어.</string>
    <string name="tv_talk_second_en">From now on, please press the microphone and answer my questions.</string>
    <string name="tv_talk_second_kr">앞으로 내가 하는 질문에 대해서 마이크를 누르고 답변해줘!</string>
    <string name="tv_talk_third_en">And from now on, only audio will be provided. If you find it difficult to understand, try using the three buttons somewhere.</string>
    <string name="tv_talk_third_kr">그리고 이제부터는 음성만 나올건데,\n이해가 어렵다면 아래의 3개 버튼을 활용해봐</string>
    <string name="tv_talk_guide">마이크를 누르고 대답을 해주세요</string>
    <string name="tv_talk_guide_again">마이크를 누르고 다시 발음해보세요!</string>
    <string name="tv_guide_feedback">오늘 받은 AI 피드백과 \n저장한 표현을 확인해보아요</string>
    <string name="tv_guide_click">단어나 문장을 눌러\n원하는 표현을 저장하고\n모르는 단어의 뜻을 살펴봐요</string>
    <string name="tv_guide_speak">버튼을 누른 후 말해주세요</string>
    <string name="tv_guide_hint">말하기 어려울 땐 힌트를 봐요</string>
    <string name="tv_home_user_name">김지은님,</string>
    <string name="home_continue">이어서 대화해볼까요?</string>
    <string name="tv_home_learning_step">아직은 씨앗이에요!\n학습을 통해 예쁜 꽃을 피워보세요:)</string>
    <string name="tv_home_talk_start">대화 시작하기</string>
    <string name="tv_home_no_learning">학습하지 않았어요.</string>
    <string name="tv_home_calendar_mon">월</string>
    <string name="tv_home_calendar_tues">화</string>
    <string name="tv_home_calendar_wednes">수</string>
    <string name="tv_home_calendar_thurs">목</string>
    <string name="tv_home_calendar_fri">금</string>
    <string name="tv_home_calendar_satur">토</string>
    <string name="tv_home_calendar_sun">일</string>
    <string name="tv_home_learning_time">대화시간</string>
    <string name="tv_home_learning_storage">저장 목록 %1$d개</string>
    <string name="tv_home_learning_feedback">피드백 %1$d개</string>
    <string name="tv_home_learning_review">복습하기</string>
    <string name="tv_my_page_setting_label">개인정보/설정</string>
    <string name="tv_my_page_alarm_label">학습알림설정</string>
    <string name="tv_my_page_alarm_divide">|</string>
    <string name="tv_my_page_logout_label">로그아웃</string>
    <string name="tv_my_page_withdraw_label">회원탈퇴</string>
    <string name="tv_my_page_setting_tab_label">환경설정</string>
    <string name="tv_my_page_my_flower">My Flower</string>
    <string name="tv_my_page_chart_label">📈 내 실력차트</string>
    <string name="tv_my_page_chart_recent">최근학습</string>
    <string name="tv_my_page_chart_before">직전학습</string>
    <string name="tv_my_page_navigate_save">저장 목록</string>
    <string name="tv_my_page_navigate_feedback">피드백</string>
    <string name="tv_my_page_chart_label_grammar">문법</string>
    <string name="tv_my_page_chart_label_expression">어휘</string>
    <string name="tv_my_page_chart_label_pronunciation">발음</string>
    <string name="tv_my_page_chart_label_Listening">듣기</string>
    <string name="tv_my_page_chart_label_empty">학습 데이터를 모으고 있어요.</string>
    <string name="tv_my_page_chart_recent_week">이번주</string>
    <string name="tv_my_page_chart_before_week">지난주</string>
    <string name="tv_my_page_chart_recent_month">이번달</string>
    <string name="tv_my_page_chart_before_month">지난달</string>
    <string name="btn_logout_to_login">로그인</string>
    <string name="tv_logout_title">로그아웃 되었습니다.</string>
    <string name="tv_withdraw_title">정말 탈퇴하시겠습니까?</string>
    <string name="tv_withdraw_description">기록이 모두 삭제되며,\n다시 복구할 수 없습니다.</string>
    <string name="btn_withdraw_yes">탈퇴</string>
    <string name="btn_withdraw_no">취소</string>
    <string name="tv_my_page_navigate_chart_detail"><u>자세한 분석보기</u></string>
    <string name="tv_saved_syntax">구문</string>
    <string name="tv_saved_difficult">어려워요</string>
    <string name="tv_saved_memorized">외웠어요</string>
    <string name="tv_saved_memorizing">암기 중</string>
    <string name="tv_saved_word_count">%1$d개의 단어가 있어요!</string>
    <string name="tv_saved_sentence_count">%1$d개의 구문이 있어요!</string>
    <string name="tv_today_saved_list">오늘 저장한 목록</string>
    <string name="tv_today_received_feedback">오늘 받은 피드백</string>
    <string name="tv_today_saved_verb">v. %1$s</string>
    <string name="tv_today_saved_noun">n. %1$s</string>
    <string name="tv_today_feedback_corrected">교정된 문장</string>
    <string name="tv_today_saved_pronunciation">[%1$s]</string>
    <string name="tv_today_saved_pronunciation_accuracy">%1$d%%</string>
    <string name="tv_today_feedback_pronunciation_accuracy">정확도</string>
    <string name="tv_my_feedback_title">피드백</string>
    <string name="tv_my_feedback_pronunciation">피드백 6개</string>
    <string name="tv_my_feedback_sort_latest">최신 순</string>
    <string name="tv_my_feedback_sort_alphabetical">알파벳 순</string>
    <string name="tv_my_feedback_category_word">단어</string>
    <string name="tv_my_feedback_category_sentence">문장</string>
    <string name="tv_my_page_feedback_expression">표현</string>
    <string name="tv_my_page_feedback_sort">정렬</string>
    <string name="tv_my_page_feedback_category">카테고리</string>
    <string name="label_feedback_back">이전</string>
    <string name="label_feedback_to_talk"><u>대화로 돌아가기</u></string>
    <string name="label_feedback_next">다음</string>
    <string name="tv_challenge_participation">🔥 참여중인 챌린지</string>
    <string name="tv_challenge_recruitment">🙌 모집중인 챌린지</string>
    <string name="tv_challenge_ranking">🏆 %1$d월 학습량 순위</string>
    <string name="tv_challenge_successful">성공한 챌린지</string>
    <string name="tv_challenge_participation_title">10일동안 15분 이상\n매일 학습하기</string>
    <string name="tv_challenge_participation_date">04.20 ~ 04.30</string>
    <string name="tv_challenge_participation_progress">4/10일</string>
    <string name="tv_challenge_hint">성공 시 아이템을 획득해요!</string>
    <string name="btn_challenge_join">참여하기</string>
    <string name="et_challenge_request">챌린지 요청하기</string>
    <string name="tv_challenge_recruiting_count">👥 %1$d</string>
    <string name="tv_challenge_recruiting_hint">챌린지에 성공하면 꽃을 키우기 위한 아이템을 받을 수 있어요!</string>
    <string name="hint_challenge_search">참여하고 싶은 챌린지를 검색해보세요</string>
    <string name="tv_challenge_join_complete">💡새로운 챌린지 참여 신청이 완료되었어요!</string>
    <string name="tv_my_flower_progress_first">0분</string>
    <string name="tv_my_flower_progress_second">20분</string>
    <string name="tv_my_flower_progress_third">40분</string>
    <string name="tv_my_flower_progress_fourth">70분</string>
    <string name="tv_my_flower_progress_fifth">100분</string>
    <string name="appbar_title_talk_feedback">대화 피드백</string>
    <string name="tv_feedback_loading_title">문장을 분석하고 있어요\n잠시만 기다려주세요:)</string>
    <string name="tv_feedback_pronunciation_back"><u>대화로 돌아가기</u></string>
    <string name="tv_talk_speech">텍스트를 눌러 수정해보세요.</string>
    <string name="tv_onboarding_start_label">시작하기</string>
    <string name="tv_start_setting_flower_title">코스모스 씨앗이\n심어졌어요!</string>
    <string name="tv_start_setting_flower_description">학습을 통해 예쁜 꽃을 피워보세요:)</string>
    <string name="tv_setting_alarm_title">영어 습관 만들기</string>
    <string name="tv_setting_alarm_description">매일 꾸준히 학습할 수 있도록\n학습 알림 시간을 설정해보세요</string>
    <string name="tv_setting_alarm_cap">\'마이\'탭에서 언제든 변경할 수 있습니다.</string>
    <string name="btn_setting_alarm">이 시간으로 정할게요</string>
    <string name="tv_setting_alarm_colon">:</string>
    <string name="tv_start_setting_title">님,\n반가워요:)</string>
    <string name="tv_setting_alarm_min">0분</string>
    <string name="tv_setting_alarm_hour">0시</string>
    <string name="label_alarm_setting_hour_input">%1$d시</string>
    <string name="label_alarm_setting_minute_input">%1$d분</string>
    <string name="label_alarm_day_sun">일</string>
    <string name="label_alarm_day_mon">월</string>
    <string name="label_alarm_day_tue">화</string>
    <string name="label_alarm_day_wed">수</string>
    <string name="label_alarm_day_thu">목</string>
    <string name="label_alarm_day_fri">금</string>
    <string name="label_alarm_day_sat">토</string>
    <string name="label_quiz_spelling">스펠링</string>
    <string name="description_quiz_spelling">단어의 철자를\n입력하세요</string>
    <string name="label_quiz_meaning">뜻맞추기</string>
    <string name="description_quiz_meaning">문제를 읽고\n정답을 선택하세요</string>
    <string name="label_quiz_flash">플래시카드</string>
    <string name="description_quiz_flash">단어 카드를 좌우로\n스와이프 하세요</string>
    <string name="label_quiz_auto">AUTO</string>
    <string name="description_quiz_auto">단어 뜻과 발음\n들으며 외우기</string>
    <string name="tv_spelling_meaning_error">오답입니다!</string>
    <string name="label_quiz_app_bar_count">%1$d/%2$d</string>
    <string name="btn_today_quiz_retry">다시 풀어보기</string>
    <string name="tv_today_quiz_retry">다시 한번 도전해보세요!</string>
    <string name="tv_today_quiz_label_bad">오답입니다ㅠㅠ</string>
    <string name="tv_today_quiz_label_good">정답입니다!</string>
    <string name="tv_today_quiz_title">오늘의 퀴즈</string>
    <string name="label_today_quiz_question">%1$s의 뜻이 아닌 것은?</string>
    <string name="tv_quiz_result_title">AUTO 완료!</string>
    <string name="btn_quiz_back">그만하기</string>
    <string name="btn_quiz_continue">계속하기</string>
    <string name="tv_quiz_result_auto_label">단어 카드</string>
    <string name="tv_review_title">리뷰</string>
    <string name="btn_review_spelling">스펠링 테스트</string>
    <string name="btn_review_meaning">뜻 맞추기</string>
    <string name="btn_review_flashcards">플래시카드</string>
    <string name="btn_review_auto">자동전환 단어카드</string>
    <string name="tv_talk_review_time_label">대화시간</string>
</resources>