<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_3">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_agreement_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="0dp"
                android:paddingTop="38dp"
                app:contentInsetStart="0dp">

                <ImageView
                    android:id="@+id/btn_agreement_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:layout_marginStart="22dp"
                    android:src="@drawable/ic_back" />
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/tv_agreement_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="32dp"
            android:text="@string/agreement_title"
            android:textAppearance="@style/TextAppearance.Talkable.b_24"
            android:textColor="@color/main"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appbar_agreement_layout" />

        <CheckBox
            android:id="@+id/btn_agreement_all"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="59dp"
            android:button="@null"
            android:background="@drawable/sel_agreement_selected_all_agree"
            app:layout_constraintStart_toStartOf="@+id/tv_agreement_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_agreement_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/agreement_all"
            android:textColor="@color/gray"
            android:textAppearance="@style/TextAppearance.Talkable.sub_m_16"
            app:layout_constraintStart_toEndOf="@+id/btn_agreement_all"
            app:layout_constraintTop_toTopOf="@+id/btn_agreement_all" />

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="0.6dp"
            android:layout_marginHorizontal="27dp"
            android:layout_marginTop="23dp"
            android:background="@color/font_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_agreement_all" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_agreement_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="btn_agreement_age, btn_agreement_terms, btn_agreement_privacy, btn_agreement_marketing" />

        <CheckBox
            android:id="@+id/btn_agreement_age"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="24dp"
            android:button="@null"
            android:background="@drawable/sel_agreement_selected_agree"
            app:layout_constraintStart_toStartOf="@+id/tv_agreement_title"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/agreement_age"
            android:textColor="@color/gray"
            android:textAppearance="@style/TextAppearance.Talkable.sub_m_14"
            app:layout_constraintStart_toEndOf="@+id/btn_agreement_age"
            app:layout_constraintTop_toTopOf="@+id/btn_agreement_age" />

        <CheckBox
            android:id="@+id/btn_agreement_terms"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="18dp"
            android:button="@null"
            android:background="@drawable/sel_agreement_selected_agree"
            app:layout_constraintStart_toStartOf="@+id/tv_agreement_title"
            app:layout_constraintTop_toBottomOf="@+id/btn_agreement_age" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/agreement_terms"
            android:textColor="@color/gray"
            android:textAppearance="@style/TextAppearance.Talkable.sub_m_14"
            app:layout_constraintStart_toEndOf="@+id/btn_agreement_terms"
            app:layout_constraintTop_toTopOf="@+id/btn_agreement_terms" />

        <CheckBox
            android:id="@+id/btn_agreement_privacy"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="18dp"
            android:button="@null"
            android:background="@drawable/sel_agreement_selected_agree"
            app:layout_constraintStart_toStartOf="@+id/tv_agreement_title"
            app:layout_constraintTop_toBottomOf="@+id/btn_agreement_terms" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/agreement_privacy"
            android:textColor="@color/gray"
            android:textAppearance="@style/TextAppearance.Talkable.sub_m_14"
            app:layout_constraintStart_toEndOf="@+id/btn_agreement_privacy"
            app:layout_constraintTop_toTopOf="@+id/btn_agreement_privacy" />

        <CheckBox
            android:id="@+id/btn_agreement_marketing"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="18dp"
            android:button="@null"
            android:background="@drawable/sel_agreement_selected_agree"
            app:layout_constraintStart_toStartOf="@+id/tv_agreement_title"
            app:layout_constraintTop_toBottomOf="@+id/btn_agreement_privacy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/agreement_marketing"
            android:textAppearance="@style/TextAppearance.Talkable.sub_m_14"
            android:textColor="@color/gray"
            app:layout_constraintStart_toEndOf="@+id/btn_agreement_marketing"
            app:layout_constraintTop_toTopOf="@+id/btn_agreement_marketing" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_agreement_start"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/agreement_start"
            android:textAppearance="@style/TextAppearance.Talkable.button_b_18"
            android:textColor="@color/white"
            android:enabled="false"
            android:layout_marginHorizontal="38dp"
            android:layout_marginBottom="103dp"
            android:background="@drawable/sel_agreement_selected_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>