<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_my_feedback_grammar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="25dp"
            android:text="@string/tv_my_feedback_pronunciation"
            android:textAppearance="@style/TextAppearance.Talkable.sub_r_14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_my_feedback_grammar_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="17dp"
            android:background="@drawable/sel_my_feedback_category"
            android:padding="5dp"
            android:paddingEnd="20dp"
            android:text="@string/tv_my_page_feedback_category"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Talkable.sub_m_12"
            android:textColor="@drawable/sel_my_feedback_txt_color"
            app:layout_constraintBottom_toBottomOf="@id/tv_my_feedback_grammar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_my_feedback_grammar" />

        <TextView
            android:id="@+id/tv_my_feedback_grammar_latest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="11dp"
            android:background="@drawable/sel_my_feedback_category"
            android:padding="5dp"
            android:paddingEnd="20dp"
            android:text="@string/tv_my_feedback_sort_latest"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Talkable.sub_m_12"
            android:textColor="@drawable/sel_my_feedback_txt_color"
            app:layout_constraintBottom_toBottomOf="@id/tv_my_feedback_grammar"
            app:layout_constraintEnd_toStartOf="@id/tv_my_feedback_grammar_category"
            app:layout_constraintTop_toTopOf="@id/tv_my_feedback_grammar" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_my_feedback_grammar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:paddingHorizontal="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_my_feedback_grammar"
            tools:listitem="@layout/item_my_feedback_grammar" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>